Fix body margin shifting with modals

--- a/web_src/css/base.css
+++ b/web_src/css/base.css
@@ -67,6 +67,7 @@ body {
   flex-direction: column;
   overflow-x: visible;
   overflow-wrap: break-word;
+  scrollbar-gutter: stable;
 }
 
 textarea {
